[project]
name = "kul-nis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "matplotlib>=3.10.3",
    "nibabel>=5.3.2",
    "numpy>=2.2.6",
    "pytest>=8.4.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "simpleitk>=2.5.0"
]

[tool.basedpyright]
include = ["test/python", "src/python", "."]
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["test/python"]
pythonpath = ["src/python"]
